# Trivia-Kata

./: .gitignore  CMakeLists.txt  Game.cpp  Makefile
src/: CMakeLists.txt  Game.cpp  GameRunner.cpp  GameRunner_ForTesting.cpp  Player.cpp  QuestionManager.cpp
src/include/: Game.h  GameRunner_ForTesting.h  MoreThanMaximumPlayersException.h  Player.h  Question.h  QuestionManager.h
test/: CMakeLists.txt  TriviaGame_ApprovalTests.cpp  TriviaGame_UnitTests.cpp
test/approval_tests/: TriviaGame_ApprovalTests.GameRunner_ForTesting__runMain_RS_-586.approved.txt  TriviaGame_ApprovalTests.GameRunner_ForTesting__runMain_RS_0.approved.txt
